improve stats-client